service-a/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  type: LoadBalancer 
  selector:
    app: service-a
  ports:
    - port: 80
      targetPort: 8080
